[gd_scene load_steps=17 format=2]

[ext_resource path="res://Balls/Ball_Red.png" type="Texture" id=1]
[ext_resource path="res://Balls/Ball Red.gd" type="Script" id=2]
[ext_resource path="res://Balls/Ball Relocate.png" type="Texture" id=3]
[ext_resource path="res://Balls/SFX Bounce.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shaders/Outline.tres" type="Shader" id=5]
[ext_resource path="res://Balls/Ball_n.png" type="Texture" id=7]

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 12, 0, 8, -8, 0, -12, -8, -8, -12, 0, -8, 8, 0, 12, 8, 8 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, -1.62857, 0, 0, Vector2( 1, 0 ), 0.133501, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.533333, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 5 )
shader_param/color = Color( 1, 0, 0, 1 )
shader_param/width = 0.5
shader_param/pattern = 2
shader_param/inside = true
shader_param/add_margins = true

[sub_resource type="Animation" id=2]
resource_name = "Appear"
length = 0.466667
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.2, 0.266667, 0.333333, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ball:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.466667 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.466667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Disappear"
length = 0.466667
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.2, 0.266667, 0.333333, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ball:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.466667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
length = 0.001

[sub_resource type="CircleShape2D" id=4]
radius = 15.2985

[sub_resource type="CircleShape2D" id=5]
radius = 1.0

[node name="Ball Red" type="KinematicBody2D" groups=["Ball"]]
light_mask = 2
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
amount = 20
lifetime = 3.0
speed_scale = 2.63
local_coords = false
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
angular_velocity_random = 0.29
scale_amount = 2.0
scale_amount_curve = SubResource( 7 )
color = Color( 0.670588, 0, 0, 0.627451 )
color_ramp = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Ball" type="Sprite" parent="."]
light_mask = 0
material = SubResource( 13 )
texture = ExtResource( 1 )
normal_map = ExtResource( 7 )

[node name="Flash" type="Sprite" parent="."]
light_mask = 0
texture = ExtResource( 3 )
hframes = 6
frame = 5

[node name="RelocateTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 2 )
anims/Disappear = SubResource( 3 )
anims/RESET = SubResource( 12 )

[node name="Bounce" parent="." instance=ExtResource( 4 )]

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 131

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Teleport Trigger" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teleport Trigger"]
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
